tests/snapshots/examples_fixtures/imports__alias_invalid_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/alias_invalid_error.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E026]: INVALID MODULE ALIAS

Invalid module alias: `myfile`.

  --> examples/imports/alias_invalid_error.flx:1:1
  |
1 | import Modules.Data.MyFile as myfile
  | ^

Hint:
  Module aliases must start with an uppercase letter.
== stdout ==
<not executed>
